# ai_fin

./: .env  .replit  package-lock.json  package.json  pyproject.toml  replit.nix
client/src/: App.tsx
client/src/components/dashboard/: AIAdvisor.tsx  InvestmentOverview.tsx  QuickStats.tsx  RecentNews.tsx
client/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx  TopBar.tsx
client/src/components/reports/: ReportsPanel.tsx
client/src/components/shared/: AnalysisResults.tsx  ChatInterface.tsx  DocumentAnalysisCard.tsx  FileUploader.tsx  NewsCard.tsx  PDFViewer.tsx  UserProfileForm.tsx
client/src/lib/: api.ts  groq.ts  pdf-utils.ts  tavily.ts
client/src/pages/: AIAdvisor.tsx  Budget.tsx  Dashboard.tsx  Forecasting.tsx  Investments.tsx  Profile.tsx  Reports.tsx  RiskAnalysis.tsx
python_api/: .env  README.md  init_db.py  main.py  requirements.txt  setup.py  test_api.py
python_api/app/: __init__.py
python_api/app/api/: __init__.py  analysis.py  chat.py  documents.py  financial_data.py  news.py  users.py
python_api/app/database/: database.py
python_api/app/models/: models.py
python_api/app/schemas/: __init__.py  schemas.py
python_api/app/utils/: langchain_utils.py  pdf_utils.py
server/: routes.ts  storage.ts
shared/: schema.ts
